Support CustomAttributes in workflows

--- a/codeship-services.yml
+++ b/codeship-services.yml
@@ -5,7 +5,7 @@ sidekiq-workflows-test:
   encrypted_env_file: env.encrypted
   cached: true
   depends_on:
-    - redis
+    - redis_sidekiq_workflow
     - sidekiq-workflows-test-worker
 
 sidekiq-workflows-test-worker:
@@ -14,7 +14,7 @@ sidekiq-workflows-test-worker:
     encrypted_args_file: env.encrypted
   command: "bundle exec sidekiq -r ./test/sidekiq_workflows/processor.rb"
   depends_on:
-    - redis
+    - redis_sidekiq_workflow
 
-redis:
-  image: redis:4-alpine
+redis_sidekiq_workflow:
+  image: redis:6.2.7
